crates/swc_ecma_parser/tests/test262-error-references/fail/95e67679ebbacf14.js.stderr
error: Unexpected token `static`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/test262-parser/fail/95e67679ebbacf14.js:1:24
  |
1 | class A {static static static(){}}
  |                        ^^^^^^

